--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^6.5.0",
     "mongoose": "^5.9.21",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "swagger-ui-express": "^4.1.4",
     "yamljs": "^0.3.0"
